--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\Oef1\packages.config" />
   <repository path="..\Oef2\packages.config" />
+  <repository path="..\Oef3\packages.config" />
 </repositories>
